[package]
name = "nexal-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[[bin]]
name = "nexal-exec"
path = "src/main.rs"

[lib]
name = "nexal_exec"
path = "src/lib.rs"

[[test]]
name = "all"
path = "tests/all.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
nexal-arg0 = { workspace = true }
nexal-app-server-client = { workspace = true }
nexal-app-server-protocol = { workspace = true }
nexal-cloud-requirements = { workspace = true }
nexal-core = { workspace = true }
nexal-feedback = { workspace = true }
nexal-git-utils = { workspace = true }
nexal-otel = { workspace = true }
nexal-protocol = { workspace = true }
nexal-utils-absolute-path = { workspace = true }
nexal-utils-cli = { workspace = true }
nexal-utils-oss = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
nexal-apply-patch = { workspace = true }
nexal-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
libc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
