[package]
edition.workspace = true
license.workspace = true
name = "nexal-features"
version.workspace = true

[lib]
doctest = false
name = "nexal_features"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
nexal-login = { workspace = true }
nexal-protocol = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
