[package]
edition.workspace = true
license.workspace = true
name = "nexal-instructions"
version.workspace = true

[lib]
doctest = false
name = "nexal_instructions"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
nexal-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
