[package]
name = "nexal-keyring-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
keyring = { workspace = true, features = ["linux-native-async-persistent"] }
tracing = { workspace = true }

[lib]
test = false
doctest = false
